--- a/style.css
+++ b/style.css
@@ -22,6 +22,8 @@ body {
     background-color: #FFFFFF;
     height: 100%;
     display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .left .area {
     display: flex;
@@ -32,6 +34,7 @@ body {
 #textarea {
     padding: 12px;
     border-radius: 10px;
+    box-shadow: 0 4px 15px 0 #000428;
 }
 .left .buttons {
     display: flex;
@@ -43,26 +46,44 @@ body {
     padding: 20px 50px;
     border-radius: 50px;
     color: white;
-    background-image: linear-gradient( to right, #ed6ea0, #ec8c69, #fbb03b );
+    /* background-image: linear-gradient( to right, #ed6ea0, #ec8c69, #fbb03b ); */
     /* background: linear-gradient(to right, #aa4b6b, #6b6b83, #3b8d99);  */
     background: linear-gradient(to right, #000428, #004e92);
     box-shadow: 0 4px 15px 0 #000428;
     border: none;
     cursor: pointer;
 }
-.right .parent {
+/* .right .parent {
    margin-top: 10rem;
-}
+} */
 h1 {
+    font-size: 50px;
+    letter-spacing: 1.5px;
+    margin-top: 2rem;
 }
 .right .no-notes {
     display: block;
-    margin-top: 22rem;
+    margin-top: 15rem;
     margin-left: 0rem;
-    font-size: 22px;
+    font-size: 24px;
+    letter-spacing: 1px;
+    font-weight: 600;
+    color: crimson;
 }
 .each-notes {
+    margin-top: 2rem;
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.btn2 {
+    position: absolute;
+    font-size: 1.4rem;
+    right : 10px;
+    bottom : 10px;
+}
+.noteData {
+    padding: 10px;
+    font-size: 18px;
+    letter-spacing: 1.5px;
 }
